--- a/env.example
+++ b/env.example
@@ -14,3 +14,6 @@ SUPABASE_SERVICE_KEY=your-service-role-key-here
 # Optional: Rate limiting and payload size
 RATE_LIMIT_PER_MINUTE=60
 MAX_PAYLOAD_SIZE=50000
+
+# Supabase PostGres
+DATABASE_URL=stuff
